[package]
name = "screenplay-doc-parser-rs"
version = "0.1.3"
edition = "2024"
repository = "https://github.com/richardmrodriguez/screenplay-doc-parser"
license = "MIT"
description = "Tools to parse Screenplay-formatted documents into semantically-typed structs."

[dependencies]
dateparser = "0.2.1"
serde = { version = "1.0.219", features = ["derive"] }
unicode-segmentation = "1.12.0"
uuid = { version = "1.17.0", features = ["v4"] }
