[package]
name = "screenplay-doc-parser-rs"
version = "0.1.7"
edition = "2024"
repository = "https://github.com/richardmrodriguez/screenplay-doc-parser"
license = "AGPL-3.0-only"
description = "Tools to parse Screenplay-formatted documents into semantically-typed structs."

[dependencies]
dateparser = "0.2.1"
serde = { version = "1.0.219", features = ["derive"] }
unicode-segmentation = "1.12.0"
uuid = { version = "1.17.0", features = ["v4"] }
mupdf-basic-text-extractor = {version = "0.4.0", optional = true}

[features]
mupdf-basic-parsing = ["dep:mupdf-basic-text-extractor"]
